--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "application_form",
   "home": "./",
+  "homepage": "/casemgmt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
